--- a/docs/leslie_projection.Rmd
+++ b/docs/leslie_projection.Rmd
@@ -10,64 +10,75 @@ library(tidyverse)
 
 A population of fish we're interested in has four life stages: eggs (E), fry (F), juvenile (J), breeding adult (A). You are told that annually:
 
-- Each breeding adult will produce, on average, 600 eggs
-- 5% of eggs will survive to become fry
-- 20% of fry will survive to become juveniles
-- 16% of juveniles will survive to become adults
-- Adult survival rate year to year is 90%
+-   Each breeding adult will produce, on average, 600 eggs
+-   5% of eggs will survive to become fry
+-   20% of fry will survive to become juveniles
+-   16% of juveniles will survive to become adults
+-   Adult survival rate year to year is 90%
 
-Recall the Leslie matrix from EDS 212. Matrix multiplication (using the dot product `%*%` of the matrix with the populations at each life stage) yields the population structure at the following year. 
+Recall the Leslie matrix from EDS 212. Matrix multiplication (using the dot product `%*%` of the matrix with the populations at each life stage) yields the population structure at the following year.
 
 ### Create the Leslie matrix:
 
 ```{r}
-# Make the Leslie Matrix:
+# Make the Leslie Matrix: 
 fish_leslie <- matrix(c(0, 0, 0, 600, 0.05, 0, 0, 0, 0, 0.20, 0, 0, 0, 0, 0.16, 0.9), nrow = 4, ncol = 4, byrow = TRUE)
 
 # Check it out: 
 fish_leslie
 ```
 
-The initial population structure is given by: 
+The initial population structure is given by:
+
 ```{r}
 # Initial population structure (Roe, Fry, Juvenile, Adult): 
+
 fish_year0 <- c(5000, 8000, 600, 400)
 ```
 
-
-Add line-by-line comments wheres prompted in the code below, explaining what each is doing. Make sure that you are talking with your neighbors about what is really being created at each step. 
+Add line-by-line comments wheres prompted in the code below, explaining what each is doing. Make sure that you are talking with your neighbors about what is really being created at each step.
 
 ```{r}
 # Model projections
 
-# ------ WHAT HAPPENS HERE? ------ #
-# ------ comment line-by-line ---- #
+# Create a time series of years to estimate population size. 
 
-# The line below...
 time_yr <- seq(from = 0, to = 8, by = 1)
 
-# The line below...
+# Creating an empty matrix to store population sizes 
+
 proj_year <- matrix(ncol = length(fish_year0), nrow = length(time_yr))
 
-# The line below...
+# Populating the first row with year 0 population sizes
+
 proj_year[1, ] <- fish_year0
 
-# The for loop below...
+# Estimates population size for each year based on population size in the previous year 
+
+# 'i in 2' starts estimating population in year 2 
+
 for (i in 2:length(time_yr)) {
   proj_year[i,] <- fish_leslie %*% proj_year[i-1,]
 }
 
 
 # The rest is wrangling & visualization (run to check it out):
+
+#Update column names for population stages
+
 colnames(proj_year) <- c("eggs", "fry", "juvenile", "adult")
 
+#convert matrix to a data frame 
+
 proj_df <- data.frame(time_yr, proj_year) %>% 
+  #convert format from wide to lomg
   pivot_longer(cols = -time_yr, names_to = "lifestage", values_to = "stage_population")
 
+#plot 
 ggplot(data = proj_df, aes(x = time_yr, y = stage_population)) +
   geom_line(aes(color = lifestage)) +
   scale_y_log10()
 
 ```
 
-Test different combinations of survival / reproduction and starting population structures to see what happens! 
+Test different combinations of survival / reproduction and starting population structures to see what happens!
